removed redundant variables and toList() calls.